<resources>
    <string name="app_name">Labsheet04</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="name_value">Name</string>
    <string name="channel_name">"channel 1 "</string>
    <string name="channel_description">first channel</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_telephone">Telephone</string>
    <string name="reg_password">Password</string>
    <string name="reg_Rpassword">Re-type Password</string>
    <string name="register_btn">REGISTER</string>
    <string name="cancel_btn">CANCEL</string>
</resources>
